# $Id: Makefile.am 37964 2011-07-11 17:30:09Z gerald $
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	wireshark.nsi	\
	GetWindowsVersion.nsh \
	servicelib.nsh \
	VersionCompare.nsh \
	AdditionalTasksPage.ini \
	WinPcapPage.ini \
	WinPcap_4_1_2.exe \
	Makefile.nmake \
	Custom.nmake \
	custom_plugins.txt	\
	x64.nsh
